--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2878,9 +2878,12 @@ body {
 		padding: 0px;
 		bottom: 0px;
 		background-color: $background-content-color;
-		z-index: 999;
+		z-index: 20;
 		@include transition;
 
+		@media all and (max-width: $mobileBreakPoint) {
+			z-index: 999;
+		}
 
 		&--always-open {
 			left: 0;
@@ -2928,7 +2931,7 @@ body {
 			right: 0;
 			left: 0;
 			bottom: 0;
-			z-index: 998;
+			z-index: 19;
 			background-color: rgba(0, 0, 0, 0.4);
 			transition: all 0.5s ease;
 		}
