--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -51,15 +51,15 @@ body {
 	@include interClassContentVariant(large, medium, small, extra-small) using ($state) {
 		height: $row-height-large;
 
-		@if $state == medium {
+		@if $state ==medium {
 			height: $row-height-medium;
 		}
 
-		@if $state == small {
+		@if $state ==small {
 			height: $row-height-small;
 		}
 
-		@if $state == extra-small {
+		@if $state ==extra-small {
 			height: $base-unit-two;
 
 			svg {
@@ -427,7 +427,7 @@ body {
 	&:active {
 		outline: none;
 	}
-	
+
 	@include interClassContentVariant(large, medium, small, extra-small) using ($state) {
 		height: $row-height-large;
 		width: $row-height-large;
@@ -437,7 +437,7 @@ body {
 			width: $row-height-small;
 		}
 
-		@if $state == medium {
+		@if $state ==medium {
 			height: $row-height-medium;
 			width: $row-height-medium;
 
@@ -447,7 +447,7 @@ body {
 			}
 		}
 
-		@if $state == small {
+		@if $state ==small {
 			height: $row-height-small;
 			width: $row-height-small;
 
@@ -457,7 +457,7 @@ body {
 			}
 		}
 
-		@if $state == extra-small {
+		@if $state ==extra-small {
 			height: calc($row-height-small - $base-unit-half);
 			width: calc($row-height-small - $base-unit-half);
 
@@ -886,7 +886,7 @@ body {
 				height: calc($base-unit * 1.5);
 				width: calc($base-unit * 1.5);
 			}
-			
+
 			.vieolo-icon-button {
 				height: calc($base-unit * 1.5);
 			}
@@ -1463,7 +1463,58 @@ body {
 	max-height: 90vh;
 	overflow-y: scroll;
 	$self: &;
-	
+
+	&--sm-full {
+		@media all and (max-width: $mobileBreakPoint) {
+			& {
+				// width: 100vw;
+				// max-width: 100vw;
+				// height: 100vh;
+				// max-height: 100vh;
+				// border-radius: 0;
+
+				@include for-touch-device {
+					// max-height: max-content;
+					// min-height: 100vh;
+					// height: 100%;
+					// display: flex;
+					// flex-direction: column;
+					// justify-content: start;
+				}
+			}
+
+			#{$self}__header {
+				position: fixed;
+				top: 0;
+				background-color: $content-background-color;
+				left: 0;
+				width: 100vw;
+			}
+
+			#{$self}__footer {
+				position: fixed;
+				bottom: 0;
+				background-color: $content-background-color;
+				left: 0;
+				width: 100vw;
+			}
+
+			#{$self}__content {
+				position: fixed;
+				top: $row-height-medium;
+				bottom: $row-height-large;
+				left: 0;
+				width: 100vw;
+				background-color: $content-background-color;
+				max-height: none;
+
+				@include for-touch-device {
+					top: $row-height-large;
+				}
+			}
+		}
+	}
+
 	&--overflow-scroll {
 		#{$self}__content {
 			overflow-y: scroll;
@@ -1512,6 +1563,34 @@ body {
 				height: $row-height-medium;
 			}
 		}
+	} 
+	
+	// For when the sm full is on and the virtual keyboard of the
+	// touch device is open
+	&.vieolo-form-dialog--sm-full.vieolo-form-dialog--keyboard-open {
+		@media all and (max-width: $mobileBreakPoint) {
+			@include for-touch-device {
+				#{$self}__content {
+					top: $row-height-medium;
+
+					@media screen and (max-width: $tablet13LandscapeBreakPoint) {
+						max-height: calc(26vh - $row-height-medium - $row-height-medium);
+
+						@include for-apple-touch-device {
+							max-height: calc(36vh - $row-height-medium - $row-height-medium);
+						}
+					}
+
+					@media screen and (max-width: $mobileBreakPoint) {
+						max-height: calc(42vh - $row-height-medium - $row-height-medium);
+					}
+				}
+
+				// #{$self}__footer {
+				// 	bottom: 40vh;
+				// }
+			}	
+		}
 	}
 
 
@@ -1519,6 +1598,9 @@ body {
 		border-bottom: 1px solid $neutral-color-light;
 		height: $row-height-medium;
 		padding: 0 $base-unit;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 
 		@include for-touch-device {
 			height: $row-height-large;
@@ -1675,11 +1757,11 @@ body {
 				background-color: $secondary-color-light;
 			}
 		}
-		
+
 		&--clickable {
 			&:hover {
 				cursor: pointer;
-				border-color: $primary-color-normal;	
+				border-color: $primary-color-normal;
 			}
 		}
 	}
@@ -1944,7 +2026,7 @@ body {
 			box-sizing: border-box;
 			padding: 2px $base-unit-half;
 			cursor: pointer;
-			
+
 			svg {
 				height: 20px;
 			}
@@ -1964,7 +2046,7 @@ body {
 			&--normal {
 				border: 2px solid $neutral-color-light;
 			}
-			
+
 			&--error {
 				border: 2px solid $error-color-normal;
 			}
@@ -3000,36 +3082,36 @@ body {
 				}
 			}
 		}
-		
+
 		&__child {
 			width: $drawer-item-width - $base-unit-two;
 			margin-left: $base-unit-two;
 			height: $row-height-small;
 			border-left: 3px solid $secondary-color-light;
 			text-decoration: none;
-			
+
 			&--selected {
 				border-left: $base-unit-half solid $secondary-color-normal;
 			}
-			
+
 			&:hover {
 				background-color: $secondary-color-light;
 				cursor: pointer;
 			}
-			
+
 			.flex {
 				height: 100%;
 			}
-			
+
 			svg {
 				height: $base-unit-two;
 				fill: $secondary-color-normal;
 			}
-			
+
 			p {
 				font-size: 14px;
 			}
-			
+
 		}
 	}
 }
@@ -3411,11 +3493,11 @@ body {
 		background-color: $neutral-color-light;
 		width: 100%;
 		border-radius: $border-radius-half;
-		
+
 		&__bar {
 			height: $base-unit;
 			border-radius: inherit;
 		}
-		
+
 	}
 }
