--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2875,10 +2875,10 @@ body {
 	}
 }
 
-// .vieolo-donut-chart {
-
-
-// }
+.vieolo-donut-chart {
+	height: 100%;
+	width: 100%;
+}
 
 
 .vieolo-navbar {
